<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="30dp"
    android:background="@color/dialogBG">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        android:gravity="center"
        android:background="@color/colorWhite">
        <TextView
            android:id="@+id/text_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/exit"
            android:textColor="@color/orange"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/ok_dialog"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/ok"
                android:background="@drawable/botton"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/cancel_dialog"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:background="@drawable/botton"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>


