<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/backCard"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGreyLight">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/nnn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/graphimage"
            android:scaleType="fitXY"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/pop"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botton"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:text="@string/pop"/>
            <Button
                android:id="@+id/top"
                android:layout_width="245dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botton"
                android:textColor="@color/colorAccent"
                android:textAllCaps="false"
                android:text="@string/topRated"/>
            <Button
                android:id="@+id/upComing"
                android:layout_width="220dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/botton"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:text="@string/upComing"/>
            <Button
                android:id="@+id/playingMovies"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botton"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/playing"/>
            <Button
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botton"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:text="@string/search"
                android:onClick="searchForMovies"/>
            <Button
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/botton"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:text="@string/language"
                android:onClick="changeLanguage"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:background="@drawable/botton"
                android:src="@drawable/exit"
                android:scaleType="center"
                android:onClick="exit"/>
        </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>